--- a/src/styles/_global.module.scss
+++ b/src/styles/_global.module.scss
@@ -72,24 +72,23 @@ text {
 
 body {
   display: flex;
-  flex-direction: row;
-  background: $black-color;
   justify-content: center;
+  align-items: center;
+
+  background: $black-color;
 }
 
 .content {
-  padding: 10rem 0 10rem 0;
-  max-width: 70vw;
+  padding: 10rem 0;
+  width: 70vw;
 }
 
 .backgroundContent {
-  position: absolute;
+  display: flex;
+  justify-content: center;
+
   width: 100vw;
   left: 0;
-  pointer-events: none;
   z-index: -1;
-
-  img {
-    width: 100vw;
-  }
+  pointer-events: none;
 }
