--- a/src/styles/aboutus.module.scss
+++ b/src/styles/aboutus.module.scss
@@ -68,9 +68,13 @@
         font-weight: 500;
 
         gap: 2.25rem;
+
+        bottom: 0;
         .cases {
           display: flex;
           flex-direction: row;
+
+          white-space: nowrap;
 
           padding: 1.9375rem 3rem;
           gap: 0.625rem;
