--- a/src/styles/banner.module.scss
+++ b/src/styles/banner.module.scss
@@ -1,15 +1,25 @@
 .bannerBackground {
-  top: 0;
+  background: url('../public//image.png') no-repeat top center;
+  background-size: cover;
+  align-items: center;
+
+  width: 100vw;
+  height: 56.8vw;
 }
 
 .content {
   display: flex;
   flex-direction: column;
+  justify-content: left;
+
+  pointer-events: all;
+
+  text {
+    max-width: 37.5rem;
+  }
 
   gap: 0.2rem;
   :last-child {
     margin-top: 1rem;
   }
-
-  max-width: 36.875rem;
 }
