--- a/src/styles/_global.module.scss
+++ b/src/styles/_global.module.scss
@@ -76,19 +76,27 @@ body {
   align-items: center;
 
   background: $black-color;
-}
 
-.content {
-  padding: 10rem 0;
-  width: 70vw;
-}
+  section {
+    display: flex;
+    justify-content: center;
+    align-items: center;
 
-.backgroundContent {
-  display: flex;
-  justify-content: center;
+    width: 100vw;
+    left: 0;
+    z-index: -1;
+    pointer-events: none;
 
-  width: 100vw;
-  left: 0;
-  z-index: -1;
-  pointer-events: none;
+    .container {
+      display: flex;
+      flex-direction: row;
+      justify-content: center;
+      align-items: center;
+
+      padding: 13.125rem;
+      width: 70vw;
+
+      pointer-events: all;
+    }
+  }
 }
