--- a/src/styles/banner.module.scss
+++ b/src/styles/banner.module.scss
@@ -1,10 +1,8 @@
-.bannerBackground {
+.Banner {
   background: url('../public//image.png') no-repeat top center;
   background-size: cover;
-  align-items: center;
 
-  width: 100vw;
-  height: 56.927083333333vw;
+  height: 56.927083vw;
 }
 
 .content {
@@ -12,6 +10,7 @@
   flex-direction: column;
   justify-content: left;
 
+  width: 100%;
   pointer-events: all;
 
   transform: translateY(6.3vw);
