--- a/src/styles/aboutus.module.scss
+++ b/src/styles/aboutus.module.scss
@@ -1,7 +1,7 @@
 @use './_global.module.scss' as global;
 
 .AboutUs {
-  background: global.$black-color;
+  background: global.$dark-grey-color;
 }
 
 .container {
