--- a/src/styles/practisAreas.module.scss
+++ b/src/styles/practisAreas.module.scss
@@ -60,6 +60,7 @@
           display: flex;
           flex-direction: row;
           justify-content: space-between;
+          align-items: center;
 
           margin-top: auto;
           width: 100%;
@@ -67,6 +68,8 @@
           .Button {
             border: none;
             padding: 0.9375rem 2.375rem;
+
+            height: fit-content;
 
             color: #fff;
             background: global.$black-color;
